2004-04-21  JP Rosevear  <jpr@ximian.com>

	Fixes #56504
	
	* gui/gnome-cal.c (gnome_calendar_destroy): no need to destroy the
	creatable item handler
	(gnome_calendar_set_ui_component): don't do the creatable
	item stuff here

	* gui/e-tasks.c (e_tasks_set_ui_component): don't do the creatable
	item stuff here
	(e_tasks_destroy): no need to destroy creatable item handler

	* gui/e-calendar-table.c (e_calendar_table_set_status_message):
	comment out temporarily

	* gui/e-calendar-view.c (e_calendar_view_set_status_message): ditto
	
	* gui/calendar-component.c: switch to using per component view
	information; don't listen for config changes to the primary
	selection and selection so that different windows can have
	different calendar selections; use a local creatable items handler
	so that the new button is associated with the right window when
	setting the default times

	* gui/tasks-component.c: ditto
	
2004-04-21  JP Rosevear <jpr@ximian.com>

	* gui/e-tasks.c (set_timezone): only set the preview zone if the
	preview has been created
	(setup_widgets): set the default zone for the preview pane

2004-04-21  JP Rosevear <jpr@ximian.com>

	Fixes #55797
	
	* gui/calendar-component.c (create_new_event): force an all day
	event if we are viewing the week, month or list view, which mimics
	double click in the view

2004-04-21  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* gui/migration.c: (migrate_calendars):
	Fix crash when gconf value are not existing in the gconf
        database.

2004-04-21  Not Zed  <NotZed@Ximian.com>

	** Fixes #57034.
	
	* gui/dialogs/calendar-setup.c (create_new_source_with_group):
	NULL out source if we can't open the calendar.
	(source_group_menu_add_groups): if the group is readonly, then
	desensitise it.
	(source_group_menu_add_groups): return the first non-readonly
	calendar index.
	(calendar_setup_new_calendar): set the group history to the first
	non-readonly group.
	(calendar_setup_new_task_list): same.
